# win10-ffmpeg

./: .gitignore  CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  README.md  main.cpp
